--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-color: white;
 }
 
 .bg_glass {
-  background: linear-gradient(#ffffff18, #ffffff18);
+  background: #111827;
 }
 
 .bg_dark {
@@ -116,4 +116,12 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/Poppins-Regular.ttf') format('truetype');
 }
